--- a/ex01/ex01.tex
+++ b/ex01/ex01.tex
@@ -1,23 +1,13 @@
-\newenvironment{solution}{\iftoggle{solutions}\bgroup}{\egroup}
 
-\documentclass{exercise}
+
+\title{T-61.5130 Machine Learning and Neural Networks}
+\author{Karhunen, Luttinen}
+\date{Exercise 1, 4.11.2012}
+
 
 \begin{document}
 
-
-\begin{Large}
-\begin{bf} 
-T-61.5130 Machine Learning and Neural Networks\\ 
-\end{bf}
-\end{Large}
-Karhunen, Hao Tele\\  
-\\
-\begin{large}
-\begin{bf}
-Exercise 1,  4.11.2011\\Model answer
-\end{bf}
-\end{large}
-
+\maketitle
 
 \begin{enumerate}
 
@@ -99,7 +89,7 @@ Exercise 1,  4.11.2011\\Model answer
   \begin{solution}
 
     \begin{enumerate}
-    
+      
     \item The McCulloch-Pitts formula of a neuron is
       defined as a threshold function:
       \begin{equation}
