Add problems and solutions files for exercise 1

--- a/ex01/ex01.tex
+++ b/ex01/ex01.tex
@@ -29,12 +29,7 @@
   
   \begin{solution}
 
-    An odd sigmoid function is defined as
-    \begin{equation} \label{eq:sigmoid}
-      \varphi(v)=\frac{1-\exp(-av)}{1+\exp(-av)}=\tanh(av/2).
-    \end{equation}
-
-    The derivative:
+    The derivative of $\varphi(v)$:
     \begin{equation}
       \begin{split}
         \frac{d\varphi}{dv}&=\frac{a\exp(-av) (1 + \exp(-av)) + a\exp(-av)
